Criação dos botões de login e logout

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <div class="profile-photo">
                         <img src="img/me.jpg" alt="foto de perfil">
                     </div>
-                    <a href="#" class="instagram-login"></a>
-                    <a href="#" class="instagram-logout"></a>
+                    <a href="#" class="instagram-login">Continue como _andreolv</a>
+                    <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
             </div>
         </div>
