--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
                     <a href="#" class="instagram-login">Continue como _andreolv</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
+                <div class="group">
+                    <p class="not-account">
+                        Não é _andreolv?
+                    </p>
+                    <p class="notaccount">
+                        <span class="link-blue">Alterar contas</span>
+                        ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"><img src="img/appstore-button.png"></a>
+                        <a href="#" class="app-download"><img src="img/googleplay-button.png"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
