--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale=1.0">
         <link rel = "stylesheet" href="style.css">
+        <link rel="shortcut icon" href="img/icon.png">
         <title>Instagram</title>
     </head>
     <body>
